# Smart-Job-Tracker-Application

./: .gitignore  README.md  authenticate.py  pyproject.toml
agents/: agent.py
agents/sub_agents/: __init__.py  calendar_agent.py  drive_agent.py  gmail_agent.py  summary_agent.py
backend/: api_server.py
tools/: __init__.py  calendar_tools.py  drive_tools.py  gmail_tools.py
