[project]
name = "job-tracker"
version = "0.1.0"
description = "Multi-agent job application tracker using Google ADK and Gemini"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.33.0",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "python-dotenv>=1.2.2",
]